z-index fix

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section {
     top: 0;
     box-shadow: 0 1px var(--color-border);
     padding: 7px 20px;
-    z-index: 4;
+    z-index: 3;
     background: rgba(var(--color-fg), .9);
 }
 
@@ -51,7 +51,7 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    z-index: 4;
+    z-index: 3;
 }
 
 .menu>* {
